--- a/src/main/resources/static/index2.html
+++ b/src/main/resources/static/index2.html
@@ -1,24 +1,46 @@
 <html>
 <head>
-    meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Spring Boot WebSocket Chat Application</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+
+    <style>
+        .chat-container {
+            width: 70%;
+            height: 80%;
+        }
+        #message-window {
+            width: 100%;
+            height: calc(100% - 85px);
+        }
+        #message {
+            height: 3rem;
+        }
+    </style>
 </head>
 <body>
-<div class="container">
-    <div class="row">
+<h1 class="text-center">My Chat App</h1>
+<div class="d-flex p-3 justify-content-center align-items-center">
+    <div class="row chat-container">
         <div class="col-4 border">
-
+            Hello
         </div>
 
         <div class="col-8 border">
-
+            <div id="message-window"></div>
+            <form id="messageForm" name="messageForm">
+                <div class="form-group">
+                    <div class="input-group clearfix">
+                        <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
+                        <button type="submit" class="btn-primary">Send</button>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
-
 </div>
 </body>
 
